Updating the Category page

--- a/BookShare.MVC/Views/Categorias/Index.cshtml
+++ b/BookShare.MVC/Views/Categorias/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿@model IEnumerable<BookShare.MVC.Models.CategoriaViewModel>
 
+@{
+    ViewBag.Title = "Index";
+}
+
+<h2>Index</h2>
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
