--- a/BookShare.MVC/Views/Livros/Create.cshtml
+++ b/BookShare.MVC/Views/Livros/Create.cshtml
@@ -44,7 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AutorId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AutorId", String.Empty)
+                @Html.DropDownList("AutorId", null, "Selecione...", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AutorId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -52,7 +52,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CategoriaId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("CategoriaId", String.Empty)
+                @Html.DropDownList("CategoriaId", null, "Selecione...", new { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.CategoriaId, "", new { @class = "text-danger" })
             </div>
         </div>
