--- a/BookShare.MVC/Views/Shared/_Layout.cshtml
+++ b/BookShare.MVC/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
+    @RenderSection("styles", required: false)
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -22,8 +23,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Página Inicial", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Livros", "About", "Home")</li>
-                    <li>@Html.ActionLink("Autores", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Livros", "Index", "Livros")</li>
+                    <li>@Html.ActionLink("Autores", "Index", "Autores")</li>
+                    <li>@Html.ActionLink("Categorias", "Index", "Categorias")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
