--- a/BookShare.MVC/Views/Livros/Delete.cshtml
+++ b/BookShare.MVC/Views/Livros/Delete.cshtml
@@ -1,11 +1,5 @@
 ﻿@model BookShare.MVC.Models.LivroViewModel
 
-@{
-    ViewBag.Title = "Delete";
-}
-
-<h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>LivroViewModel</h4>
@@ -28,11 +22,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Status)
+            @Html.DisplayNameFor(model => model.SituacaoConserva)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Status)
+            @Html.DisplayFor(model => model.SituacaoConserva)
         </dd>
 
         <dt>
@@ -49,6 +43,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.CategoriaId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EditoraId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EditoraId)
         </dd>
 
     </dl>
