--- a/BookShare.MVC/Views/Livros/Create.cshtml
+++ b/BookShare.MVC/Views/Livros/Create.cshtml
@@ -1,14 +1,11 @@
 ﻿@model BookShare.MVC.Models.LivroViewModel
 
-@section styles { 
-    <style>
-        textarea{
-            width: 100%;
-            resize: none;
-        }
-
-    </style>
+@{
+    ViewBag.Title = "Create";
 }
+
+<h2>Create</h2>
+
 
 @using (Html.BeginForm()) 
 {
@@ -29,16 +26,24 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Sinopse, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Sinopse,  new { htmlAttributes = new { @class = "form-control " } })
+                @Html.EditorFor(model => model.Sinopse, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Sinopse, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SituacaoConserva, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.isbn, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.SituacaoConserva, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SituacaoConserva, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.isbn, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.isbn, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.AnoLancamento, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.AnoLancamento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.AnoLancamento, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -53,7 +58,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CategoriaId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("CategoriaId", null, "Selecione...", new { @class = "form-control" })
+                @Html.DropDownList("CategoriaId", null, "Selecione...",  new  { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.CategoriaId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -61,7 +66,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EditoraId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("EditoraId", null, "Selecione...", new { @class = "form-control" })
+                @Html.DropDownList("EditoraId", null, "Selecione...", new { @class = "form-control" } )
                 @Html.ValidationMessageFor(model => model.EditoraId, "", new { @class = "text-danger" })
             </div>
         </div>
