--- a/BookShare.MVC/Views/Livros/Delete.cshtml
+++ b/BookShare.MVC/Views/Livros/Delete.cshtml
@@ -1,5 +1,11 @@
 ﻿@model BookShare.MVC.Models.LivroViewModel
 
+@{
+    ViewBag.Title = "Delete";
+}
+
+<h2>Delete</h2>
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>LivroViewModel</h4>
@@ -22,11 +28,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SituacaoConserva)
+            @Html.DisplayNameFor(model => model.isbn)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.SituacaoConserva)
+            @Html.DisplayFor(model => model.isbn)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.AnoLancamento)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AnoLancamento)
         </dd>
 
         <dt>
