--- a/BookShare.MVC/Views/Livros/Edit.cshtml
+++ b/BookShare.MVC/Views/Livros/Edit.cshtml
@@ -1,5 +1,11 @@
 ﻿@model BookShare.MVC.Models.LivroViewModel
 
+@{
+    ViewBag.Title = "Edit";
+}
+
+<h2>Edit</h2>
+
 
 @using (Html.BeginForm())
 {
@@ -28,10 +34,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SituacaoConserva, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.isbn, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SituacaoConserva, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SituacaoConserva, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.isbn, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.isbn, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.AnoLancamento, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.AnoLancamento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.AnoLancamento, "", new { @class = "text-danger" })
             </div>
         </div>
 
