--- a/BookShare.MVC/Views/Livros/Delete.cshtml
+++ b/BookShare.MVC/Views/Livros/Delete.cshtml
@@ -48,7 +48,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.AutorId)
+            @Html.DisplayFor(model => model.Autor.Nome)
         </dd>
 
         <dt>
@@ -56,7 +56,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CategoriaId)
+            @Html.DisplayFor(model => model.Categoria.Nome)
         </dd>
 
         <dt>
@@ -64,7 +64,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EditoraId)
+            @Html.DisplayFor(model => model.Editora.Nome)
         </dd>
 
     </dl>
