--- a/BookShare.MVC/Views/Shared/_LayoutHome.cshtml
+++ b/BookShare.MVC/Views/Shared/_LayoutHome.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -18,19 +19,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("BookShare", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Página Inicial", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Livros", "Index", "Livros")</li>
-                    <li>@Html.ActionLink("Autores", "Index", "Autores")</li>
-                    <li>@Html.ActionLink("Categorias", "Index", "Categorias")</li>
-                    <li>@Html.ActionLink("Editoras", "Index", "Editoras")</li>
-
-                    <hr />
-                </ul>
-                @Html.Partial("_LoginPartial")
+                @Html.Partial("_LoginPartialHome")
             </div>
         </div>
     </div>
