--- a/BookShare.MVC/Views/Shared/_Layout.cshtml
+++ b/BookShare.MVC/Views/Shared/_Layout.cshtml
@@ -18,11 +18,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("BookShare", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("BookShare", "Index", "Livros", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Página Inicial", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Página Inicial", "Index", "Livros")</li>
                     <li>@Html.ActionLink("Livros", "Index", "Livros")</li>
                     <li>@Html.ActionLink("Autores", "Index", "Autores")</li>
                     <li>@Html.ActionLink("Categorias", "Index", "Categorias")</li>
