--- a/BookShare.MVC/Views/Account/Login.cshtml
+++ b/BookShare.MVC/Views/Account/Login.cshtml
@@ -17,11 +17,18 @@
         .container-login{
             /*margin: auto;*/
             background-color: white;
+            margin-top: 5em;
         }
+
+        body {
+            background-image: url("../../Content/image/image-login.jpg");
+            background-color: #ffffff;    
+        }
+
     </style>
     }
 
-<div class="container-fluid">
+<div class="container-main container-fluid">
     <div class="row">
         <div class="col-md-6 col-md-offset-3 container-login">
             @*<div class="jumbotron">*@
@@ -58,7 +65,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-12">
-                                <input type="submit" value="Entrar" class="btn btn-default col-md-12" />
+                                <input type="submit" value="Entrar" class="btn btn-warning col-md-12" />
                             </div>
                         </div>
                         <p>
