--- a/BookShare.MVC/Views/Shared/_LoginPartialHome.cshtml
+++ b/BookShare.MVC/Views/Shared/_LoginPartialHome.cshtml
@@ -1,4 +1,8 @@
-﻿
-<ul class="nav navbar-nav navbar-right">
-    <li>@Html.ActionLink("Entrar", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "btn btn-default" })</li>
+﻿@section styles{
+    <style>
+        
+    </style>
+}
+<ul class="navbar-right">
+    <li>@Html.ActionLink("Entrar", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "btn btn-warning" })</li>
 </ul>
