--- a/BookShare.MVC/Views/Account/ConfirmEmail.cshtml
+++ b/BookShare.MVC/Views/Account/ConfirmEmail.cshtml
@@ -5,6 +5,6 @@
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Obrigado por confirmar seu e-mail. Please @Html.ActionLink("Clique aqui para entrar", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
