--- a/BookShare.MVC/Views/Account/ExternalLoginFailure.cshtml
+++ b/BookShare.MVC/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Login Failure";
+    ViewBag.Title = "Falha de logon";
 }
 
 <hgroup>
     <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
+    <h3 class="text-danger">Falha ao fazer logon no serviço.</h3>
 </hgroup>
