--- a/BookShare.MVC/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/BookShare.MVC/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -8,8 +8,8 @@
     if (loginProviders.Count() == 0) {
         <div>
             <p>
-                There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
+                Não há serviços de autenticação externos configurados. Consulte <a href="https://go.microsoft.com/fwlink/?LinkId=403804">este artigo</a>
+                para obter detalhes sobre como configurar este aplicativo ASP.NET para dar suporte ao registro em log por meio de serviços externos.
             </p>
         </div>
     }
