--- a/BookShare.MVC/Views/Shared/_LayoutHome.cshtml
+++ b/BookShare.MVC/Views/Shared/_LayoutHome.cshtml
@@ -11,26 +11,17 @@
 
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="navbar-collapse collapse">
+    <div class="navbar navbar-fixed-top">
+        <div class="btn-home container">
                 @Html.Partial("_LoginPartialHome")
-            </div>
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        @*<hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Bookshare</p>
-        </footer>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
