Removing the menubar from the login page

--- a/BookShare.MVC/Views/Account/ForgotPassword.cshtml
+++ b/BookShare.MVC/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ForgotPasswordViewModel
+﻿@model BookShare.MVC.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Esqueceu sua senha?";
 }
