--- a/BookShare.MVC/Views/Account/ResetPassword.cshtml
+++ b/BookShare.MVC/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ResetPasswordViewModel
+﻿@model BookShare.MVC.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Redefinir senha";
 }
