--- a/BookShare.MVC/Views/Account/SendCode.cshtml
+++ b/BookShare.MVC/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.SendCodeViewModel
+﻿@model BookShare.MVC.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Enviar";
 }
