--- a/BookShare.MVC/Views/Account/VerifyCode.cshtml
+++ b/BookShare.MVC/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.VerifyCodeViewModel
+﻿@model BookShare.MVC.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verificar";
 }
