--- a/BookShare.MVC/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/BookShare.MVC/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ExternalLoginConfirmationViewModel
+﻿@model BookShare.MVC.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Registre-se";
 }
