--- a/BookShare.MVC/Views/Account/Register.cshtml
+++ b/BookShare.MVC/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.RegisterViewModel
+﻿@model BookShare.MVC.Models.RegisterViewModel
 @{
     ViewBag.Title = "Registre-se";
 }
