Changing the login layout

--- a/BookShare.MVC/Views/Account/Login.cshtml
+++ b/BookShare.MVC/Views/Account/Login.cshtml
@@ -29,7 +29,7 @@
     </style>
     }
 
-<div class="container-main container-fluid">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-6 col-md-offset-3 container-login">
             @*<div class="jumbotron">*@
