--- a/BookShare.MVC/Views/Account/Login.cshtml
+++ b/BookShare.MVC/Views/Account/Login.cshtml
@@ -29,54 +29,61 @@
     </style>
     }
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3 container-login">
-            @*<div class="jumbotron">*@
+    <div class="container-fluid">
+        <header>
+            <div class="row">
+                <div class=" col-md-12">
+                    <a href='@Url.Action("Index", "Home")'><img src='@Url.Content("../../Content/image/logo.png")' width="200" alt="Logo" /></a>
+                </div>
+            </div>
+        </header>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 container-login">
+                @*<div class="jumbotron">*@
                 <h2>@ViewBag.Title</h2>
                 <section id="loginForm">
                     @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                        @Html.AntiForgeryToken()
-                        <hr />
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                @Html.LabelFor(m => m.Email, new { @class = "label-size control-label" })
-                                <br />
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                {
+                    @Html.AntiForgeryToken()
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            @Html.LabelFor(m => m.Email, new { @class = "label-size control-label" })
+                            <br />
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+                            <br />
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group ">
+                        <div class="checkbox-form col-md-12">
+                            <div class="checkbox">
+                                @Html.CheckBoxFor(m => m.RememberMe)
+                                @Html.LabelFor(m => m.RememberMe)
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                @Html.LabelFor(m => m.Password, new { @class = "control-label" })
-                                <br />
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <input type="submit" value="Entrar" class="btn btn-warning col-md-12" />
                         </div>
-                        <div class="form-group ">
-                            <div class="checkbox-form col-md-12">
-                                <div class="checkbox">
-                                    @Html.CheckBoxFor(m => m.RememberMe)
-                                    @Html.LabelFor(m => m.RememberMe)
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                <input type="submit" value="Entrar" class="btn btn-warning col-md-12" />
-                            </div>
-                        </div>
-                        <p>
-                            @Html.ActionLink("Registre-se", "Register")
-                        </p>
-                        @* Enable this once you have account confirmation enabled for password reset functionality
-                        <p>
-                            @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                        </p>*@
-                    }
+                    </div>
+                    <p>
+                        @Html.ActionLink("Registre-se", "Register")
+                    </p>
+                    @* Enable this once you have account confirmation enabled for password reset functionality
+                    <p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>*@
+            }
                 </section>
             </div>
             @*<div class="col-md-4">
@@ -84,9 +91,9 @@
                     @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
                 </section>
             </div>*@
-        @*</div>*@
+            @*</div>*@
+        </div>
     </div>
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
