--- a/BookShare.MVC/Views/Account/Register.cshtml
+++ b/BookShare.MVC/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model BookShare.MVC.Models.RegisterViewModel
 @{
     ViewBag.Title = "Registre-se";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
 @section styles{
@@ -27,6 +28,13 @@
 }
 
 <div class="container-fluid">
+    <header>
+        <div class="row">
+            <div class=" col-md-12">
+                <a href='@Url.Action("Index", "Home")'><img src='@Url.Content("../../Content/image/logo.png")' width="200" alt="Logo" /></a>
+            </div>
+        </div>
+    </header>
     <div class="row">
         <div class="col-md-6 col-md-offset-3 container-login">
             <h2>@ViewBag.Title.</h2>
@@ -37,26 +45,30 @@
                 <hr />
                 @Html.ValidationSummary("", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+
+                    <div class="col-md-12">
+                        @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+                        <br />
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+                    <div class="col-md-12">
+                        @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+                        <br />
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+                    <div class="col-md-12">
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
+                        <br />
                         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" class="btn btn-default" value="Registrar-se" />
+                    <div class="col-md-12">
+                        <input type="submit" class="btn btn-warning col-md-12" value="Registrar-se" />
                     </div>
                 </div>
             }
