Adiing an icone to the menu bar

--- a/BookShare.MVC/Content/Site.css
+++ b/BookShare.MVC/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-color: #FFCA00;
+    background-color: #ffe63f;
 }
 .btn-home{
     margin-top: 20px;
@@ -10,6 +10,9 @@
 
 .btn-home, .navbar-right {
     list-style: none;
+}
+.icone-menu{
+    margin-top: 5px;
 }
 /* Set padding to keep content from hitting the edges */
 /*.body-content {
