--- a/BookShare.MVC/Views/Account/Login.cshtml
+++ b/BookShare.MVC/Views/Account/Login.cshtml
@@ -25,7 +25,9 @@
             background-image: url("../../Content/image/image-login.jpg");
             background-color: #ffffff;    
         }
-
+        .control-label{
+            font-size: 15px;
+        }
     </style>
     }
 
