--- a/BookShare.MVC/Views/Shared/_LayoutHome.cshtml
+++ b/BookShare.MVC/Views/Shared/_LayoutHome.cshtml
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>BookShare</title>
+    <link rel="shortcut icon" href="../../Content/image/icone.png">
     @Styles.Render("~/Content/css")
     @RenderSection("styles", required: false)
     @Scripts.Render("~/bundles/modernizr")
