--- a/BookShare.MVC/Views/Shared/_Layout.cshtml
+++ b/BookShare.MVC/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>BookShares</title>
+    <link rel="shortcut icon" href="../../Content/image/icone.png">
     @Styles.Render("~/Content/css")
     @RenderSection("styles", required: false)
     @Scripts.Render("~/bundles/modernizr")
@@ -18,7 +19,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("BookShare", "Index", "Livros", new { area = "" }, new { @class = "navbar-brand" })
+                @*@Html.ActionLink("BookShare", "Index", "Livros", new { area = "" }, new { @class = "navbar-brand" })*@
+                <a href='@Url.Action("Index", "Livros")'><img src='@Url.Content("../../Content/image/icone.png")' width="35" alt="Logo" class="icone-menu" /></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
