--- a/BookShare.MVC/Content/Site.css
+++ b/BookShare.MVC/Content/Site.css
@@ -14,6 +14,10 @@
 .icone-menu{
     margin-top: 5px;
 }
+.container-login {
+    /*margin: auto;*/
+    background-color: white;
+}
 /* Set padding to keep content from hitting the edges */
 /*.body-content {
     padding-left: 15px;
