--- a/BookShare.MVC/Views/Account/Register.cshtml
+++ b/BookShare.MVC/Views/Account/Register.cshtml
@@ -14,11 +14,7 @@
             position: absolute;
             margin-left: -0px;
         }*/
-        .container-login {
-            /*margin: auto;*/
-            background-color: white;
-            margin-top: 5em;
-        }
+
 
         body {
             background-image: url("../../Content/image/image-login.jpg");
@@ -30,48 +26,69 @@
 <div class="container-fluid">
     <header>
         <div class="row">
-            <div class=" col-md-12">
-                <a href='@Url.Action("Index", "Home")'><img src='@Url.Content("../../Content/image/logo.png")' width="200" alt="Logo" /></a>
-            </div>
+            <a href='@Url.Action("Index", "Home")'><img src='@Url.Content("../../Content/image/logo.png")' width="110" alt="Logo" /></a>
+
         </div>
     </header>
     <div class="row">
-        <div class="col-md-6 col-md-offset-3 container-login">
+        <div class=" col-md-3">
+        </div>
+        <div class="col-md-6  container-login">
             <h2>@ViewBag.Title.</h2>
 
             @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <hr />
-                @Html.ValidationSummary("", new { @class = "text-danger" })
-                <div class="form-group">
-
-                    <div class="col-md-12">
-                        @Html.LabelFor(m => m.Email, new { @class = "control-label" })
-                        <br />
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                    </div>
+        {
+            @Html.AntiForgeryToken()
+            <hr />
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-12">
+                    @Html.LabelFor(m => m.Nome, new { @class = "control-label" })
+                    <br />
+                    @Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })
                 </div>
-                <div class="form-group">
-                    <div class="col-md-12">
-                        @Html.LabelFor(m => m.Password, new { @class = "control-label" })
-                        <br />
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                    </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-12">
+                    @Html.LabelFor(m => m.Endereco, new { @class = "control-label" })
+                    <br />
+                    @Html.TextBoxFor(m => m.Endereco, new { @class = "form-control" })
                 </div>
-                <div class="form-group">
-                    <div class="col-md-12">
-                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
-                        <br />
-                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                    </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-12">
+                    @Html.LabelFor(m => m.Telefone, new { @class = "control-label" })
+                    <br />
+                    @Html.TextBoxFor(m => m.Telefone, new { @class = "form-control" })
                 </div>
-                <div class="form-group">
-                    <div class="col-md-12">
-                        <input type="submit" class="btn btn-warning col-md-12" value="Registrar-se" />
-                    </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-12">
+                    @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+                    <br />
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                 </div>
-            }
+            </div>
+            <div class="form-group">
+                <div class="col-md-12">
+                    @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+                    <br />
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-12">
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
+                    <br />
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-12">
+                    <input type="submit" class="btn btn-warning col-md-12" value="Registrar-se" />
+                </div>
+            </div>
+    }
         </div>
     </div>
 </div>
