--- a/BookShare.MVC/Views/Manage/ChangePassword.cshtml
+++ b/BookShare.MVC/Views/Manage/ChangePassword.cshtml
@@ -1,40 +1,52 @@
 ﻿@model BookShare.MVC.Models.ChangePasswordViewModel
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Mude sua senha";
 }
 
-<h2>@ViewBag.Title.</h2>
+@section styles{
+    <style>
+        .container-login{
+            margin-top: 20px;
+        }
+    </style>
+    }
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3 container-login">
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+            @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <h2>@ViewBag.Title</h2>
+        <hr />
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group">
+            @*@Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })*@
+            <div class="col-md-12">
+                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control", @placeholder = "Senha Antiga" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+        <div class="form-group">
+            @*@Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })*@
+            <div class="col-md-12">
+                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", @placeholder = "Nova senha" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+        <div class="form-group">
+            @*@Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })*@
+            <div class="col-md-12">
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirmar Senha" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+        <div class="form-group">
+            <div class="col-md-12">
+                <input type="submit" value="Alterar senha" class="btn btn-warning col-md-12" />
+            </div>
         </div>
-    </div>
 }
+        </div>
+    </div>
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
