Creating a file upload system

--- a/BookShare.MVC/Views/Livros/Details.cshtml
+++ b/BookShare.MVC/Views/Livros/Details.cshtml
@@ -27,11 +27,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.isbn)
+            @Html.DisplayNameFor(model => model.Isbn)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.isbn)
+            @Html.DisplayFor(model => model.Isbn)
         </dd>
 
         <dt>
