--- a/BookShare.MVC/Views/Livros/Index.cshtml
+++ b/BookShare.MVC/Views/Livros/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.Sinopse)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.isbn)
+            @Html.DisplayNameFor(model => model.Isbn)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.AnoLancamento)
@@ -44,7 +44,7 @@
             @Html.DisplayFor(modelItem => item.Sinopse)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.isbn)
+            @Html.DisplayFor(modelItem => item.Isbn)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.AnoLancamento)
@@ -57,6 +57,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Editora.Nome)
+        </td>
+        <td>
+            <img src="@item.Foto" border="0" width="100" />
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.LivroId }) |
