--- a/BookShare.MVC/Views/Livros/Details.cshtml
+++ b/BookShare.MVC/Views/Livros/Details.cshtml
@@ -70,5 +70,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.LivroId }) |
+    @Html.ActionLink("Delete", "Delete", new { id = Model.LivroId }) | 
     @Html.ActionLink("Back to List", "Index")
 </p>
